Added spotless plugin, formatted in the style of google